# Scoop-Create

./: .gitignore  AGENTS.md  LICENSE  README.md  config-example.json  pyproject.toml
src/scoop_create/: __init__.py  __main__.py  cli.py  config.py  constants.py  github.py  interactive.py  manifest.py  service.py  utils.py
tests/: test_cli.py  test_config.py  test_github.py  test_manifest.py  test_service.py  test_utils.py
