[project]
name = "scoop-create"
version = "0.0.6"
description = "Generate Scoop app manifests from GitHub repository URLs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    {name = "Ylem"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.25.1",
    "pydantic>=2.13.4",
    "httpx>=0.28.1",
    "prompt-toolkit>=3.0.52",
    "rich>=15.0.0",
]

[project.urls]
Homepage = "https://github.com/Ylemir/Scoop-Create"
Repository = "https://github.com/Ylemir/Scoop-Create"
Issues = "https://github.com/Ylemir/Scoop-Create/issues"

[project.scripts]
scoop-create = "scoop_create.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pytest>=9.0.2",
    "ruff>=0.15.9",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "SIM",
]
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"src/scoop_create/cli.py" = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
